assets/css/style.css
/* Utilities */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', 'Arial', sans-serif;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.margin-top-10px {
  margin-top: 10px;
}

.margin-left-5px {
  margin-left: 5px;
}

.text-align-left {
  text-align: left;
}

.text-align-right {
  text-align: right;
}

/* Navbar */

.navbar-container-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 16px;
}

ul li {
  display: inline-block;
  margin-right: 10px;
}

#rules {
  margin-left: 10px;
}

#logo {
  margin-left: 10px;
  height: 100px;
  width: 100px;
}

#logo img {
  width: 100%;
  height: 100%;
}

/* Puzzle area */

.puzzle-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 10%;
}

.puzzle-area-row-flex {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: nowrap;
  gap: 1px;
  width: 80%;
  margin-top: 2px;
}

.tile {
  background-color: #f4f4f4;
  border: #111111 1px solid;
  border-radius: 2px;
  width: 60px;
  height: 60px;
  font-size: 30px;
  text-align: center;
  padding-top: 11px;
}

/* Keyboard panel */

.keyboard-panel-area {
  font-size: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 5%;
}

.keyboard-panel-row {
  display: flex;
  justify-content: center;
  flex-wrap: nowrap;
  gap: 5px;
  width: 100%;
  margin-top: 5px;
  margin-bottom: 5px;
}

.letter-button {
  height: 40px;
  width: 8%;
  max-width: 40px;
  text-align: center;
  font-size: 14px;
}

#enter-button, #delete-button {
  width: 10%;
  height: 40px;
  min-width: 40px;
  max-width: 80px;
  font-size: 14px;
}

/* Part of game functionality and popups*/

.red-button, .red-background {
  background-color: red;
}

.green-button, .green-background {
  background-color: green;
}

.yellow-button, .yellow-background {
  background-color: yellow;
}

.grey-background {
  background-color: gray;
}

.letter-button-example {
  width: 60px;
  height: 60px;
  font-size: 30px;
  border: #111111 1px solid;
}

.html-container-height {
  height: 60vh;
}

/* Footer */

footer {
  border-top: #111111 2px solid;
  margin-top: auto;
  text-align: center;
  font-size: 16px;
}

/* Media queries */

@media screen and (min-width: 860px) {
  #delete-button, #enter-button {
    font-size: 24px;
  }
}

